@@ -8,41 +8,41 @@ author: davidortinau
 ms.author: daortin
 ms.date: 06/02/2018
 ms.openlocfilehash: 9c9b9f5a205a2eef7db9f27e8d09b10ce65a4318
-ms.sourcegitcommit: 2fbe4932a319af4ebc829f65eb1fb1816ba305d3
-ms.translationtype: MT
+ms.sourcegitcommit: 9ee02a2c091ccb4a728944c1854312ebd51ca05b
+ms.translationtype: HT
 ms.contentlocale: de-DE
-ms.lasthandoff: 10/29/2019
+ms.lasthandoff: 03/10/2020
 ms.locfileid: "73027053"
 ---
 # <a name="adjusting-java-memory-parameters-for-the-android-designer"></a>Anpassen der Java-Speicherparameter für Android Designer
 
-Die standardmäßigen Arbeitsspeicher Parameter, die beim Starten des `java` Prozesses für den Android-Designer verwendet werden, sind möglicherweise mit einigen Systemkonfigurationen nicht kompatibel.
+Die Standardspeicherparameter, die beim Starten des `java`-Prozesses für den Android-Designer verwendet werden, sind möglicherweise mit einigen Systemkonfigurationen nicht kompatibel.
 
-Beginnend mit Xamarin Studio 5.7.2.7 (und höher Visual Studio für Mac) und Visual Studio-Tools für xamarin 3.9.344 können diese Einstellungen auf Projektbasis angepasst werden.
+Ab Xamarin Studio 5.7.2.7 (und höher, Visual Studio für Mac) und Visual Studio-Tools für Xamarin 3.9.344 können diese Einstellungen projektbezogen angepasst werden.
 
-## <a name="new-android-designer-properties-and-corresponding-java-options"></a>Neue Android-Designer-Eigenschaften und zugehörige Java-Optionen
+## <a name="new-android-designer-properties-and-corresponding-java-options"></a>Neue Eigenschaften für den Android-Designer und entsprechende Java-Optionen
 
-Die folgenden Eigenschaftsnamen entsprechen der angegeben Java [-Befehlszeilenoption](https://docs.oracle.com/javase/7/docs/technotes/tools/windows/java.html) .
+Die folgenden Eigenschaftsnamen entsprechen der angegebenen [Befehlszeilenoption](https://docs.oracle.com/javase/7/docs/technotes/tools/windows/java.html) für Java.
 
-- **Androiddesignerjavarendererminmemory** -XMS
+- **AndroidDesignerJavaRendererMinMemory** -Xms
 
-- **Androiddesignerjavarenderermaxmemory** -xmx
+- **AndroidDesignerJavaRendererMaxMemory** -Xmx
 
-- **Androiddesignerjavarendererpermsize** -XX: maxpermsize
+- **AndroidDesignerJavaRendererPermSize** -XX:MaxPermSize
 
-# <a name="visual-studiotabwindows"></a>[Visual Studio](#tab/windows)
+# <a name="visual-studio"></a>[Visual Studio](#tab/windows)
 
 1. Öffnen Sie Ihre Projektmappe in Visual Studio.
 
-2. Wählen Sie jedes Android-Projekt nacheinander im Projektmappen-Explorer aus, und klicken Sie für jedes Projekt zweimal auf [alle Dateien anzeigen](https://docs.microsoft.com/previous-versions/visualstudio/visual-studio-2008/4afxey9h(v=vs.90)) . Sie können Projekte überspringen, die keine `.axml` Layoutdateien enthalten. Mit diesem Schritt wird sichergestellt, dass jedes Projektverzeichnis eine `.csproj.user` Datei enthält.
+2. Wählen Sie die Android-Projekte einzeln im Projektmappen-Explorer aus, und doppelklicken Sie in jedem Projekt auf [Alle Dateien anzeigen](https://docs.microsoft.com/previous-versions/visualstudio/visual-studio-2008/4afxey9h(v=vs.90)). Sie können Projekte überspringen, die keine `.axml`-Layoutdateien enthalten. Mit diesem Schritt stellen Sie sicher, dass jedes Projektverzeichnis eine `.csproj.user`-Datei enthält.
 
 3. Verlassen Sie Visual Studio.
 
-4. Suchen Sie die `.csproj.user` Datei für jedes der Projekte aus Schritt 2.
+4. Suchen Sie die `.csproj.user`-Datei für jedes Projekt aus Schritt 2.
 
-5. Bearbeiten Sie jede `.csproj.user` Datei in einem Text-Editor.
+5. Bearbeiten Sie jede `.csproj.user`-Datei in einem Text-Editor.
 
-6. Fügen Sie eine oder alle der neuen Arbeitsspeicher Eigenschaften für Android-Designer in einem `<PropertyGroup>`-Element hinzu. Sie können eine vorhandene `<PropertyGroup>` verwenden oder eine neue erstellen. Im folgenden finden Sie ein vollständiges Beispiel `.csproj.user` Datei mit allen drei Attributen, die auf ihre Standardwerte festgelegt sind:
+6. Fügen Sie einige oder alle neuen Arbeitsspeicheroptionen für Android Designer in einem `<PropertyGroup>`-Element hinzu. Sie können ein vorhandenes `<PropertyGroup>`-Element verwenden oder ein neues erstellen. Im Folgenden sehen Sie eine vollständige `.csproj.user`-Beispieldatei mit allen drei Attributen, die auf ihre jeweiligen Standardwerte festgelegt sind:
 
     ```xml
     <?xml version="1.0" encoding="utf-8"?>
@@ -58,29 +58,29 @@ Die folgenden Eigenschaftsnamen entsprechen der angegeben Java [-Befehlszeilenop
     </Project>
     ```
 
-7. Speichern und schließen Sie alle aktualisierten `.csproj.user` Dateien.
+7. Speichern und schließen Sie alle aktualisierten `.csproj.user`-Dateien.
 
-8. Starten Sie Visual Studio neu, und öffnen Sie die Lösung erneut
+8. Starten Sie Visual Studio neu, und öffnen Sie Ihre Projektmappe erneut.
 
-# <a name="visual-studio-for-mactabmacos"></a>[Visual Studio für Mac](#tab/macos)
+# <a name="visual-studio-for-mac"></a>[Visual Studio für Mac](#tab/macos)
 
-1. Öffnen Sie die Projekt Mappe in Visual Studio für Mac, um sicherzustellen, dass das Projektmappenverzeichnis eine `.userprefs` Datei enthält
+1. Öffnen Sie Ihre Projektmappe in Visual Studio für Mac, um sich zu vergewissern, dass das Projektmappenverzeichnis eine `.userprefs`-Datei enthält.
 
 2. Beenden Sie Visual Studio für Mac.
 
 3. Suchen Sie die `.userprefs`-Datei im Projektmappenverzeichnis.
 
-4. Bearbeiten Sie die `.userprefs` Datei in einem Text-Editor.
+4. Bearbeiten Sie die `.userprefs`-Datei in einem Text-Editor.
 
-5. Suchen Sie das vorhandene XML-Element im folgenden Format. Der letzte Teil dieses Element namens entspricht dem Namen Ihres Projekts: "AndroidApplication1" in diesem Beispiel:
+5. Suchen Sie das vorhandene XML-Element mit folgendem Format. Der letzte Teil des Namens dieses Elements entspricht dem Namen Ihres Projekts: In diesem Beispiel „AndroidApplication1“:
 
     ```xml
     <MonoDevelop.Ide.ItemProperties.AndroidApplication1 ... >
     ```
 
-6. Wenn das `<MonoDevelop.Ide.ItemProperties.AndroidApplication1 ... >` Element nicht vorhanden ist, erstellen Sie es an beliebiger Stelle innerhalb des einschließenden `<Properties>` Elements. Stellen Sie sicher, dass Sie "AndroidApplication1" durch den Namen Ihres Projekts ersetzen.
+6. Wenn das `<MonoDevelop.Ide.ItemProperties.AndroidApplication1 ... >`-Element nicht vorhanden ist, erstellen Sie es an einer beliebigen Stelle im umschließenden `<Properties>`-Element. Stellen Sie sicher, dass Sie „AndroidApplication1“ durch den Namen Ihres Projekts ersetzen.
 
-7. Fügen Sie eine oder alle der neuen Arbeitsspeicher Eigenschaften für Android-Designer als Attribute für das-Element hinzu. Im folgenden finden Sie ein vollständiges Beispiel `.userprefs` Datei mit allen drei Attributen, die auf ihre Standardwerte festgelegt sind:
+7. Fügen Sie einige oder alle neuen Arbeitsspeicheroptionen für Android Designer als Attribut im Element hinzu. Im Folgenden sehen Sie eine vollständige `.userprefs`-Beispieldatei mit allen drei Attributen, die auf ihre jeweiligen Standardwerte festgelegt sind:
 
     ```xml
     <Properties StartupItem="AndroidApplication1\AndroidApplication1.csproj">
@@ -94,10 +94,10 @@ Die folgenden Eigenschaftsnamen entsprechen der angegeben Java [-Befehlszeilenop
     </Properties>
     ```
 
-8. Wiederholen Sie die Schritte 5-7 für jedes Android-Projekt in der Projekt Mappe, das alle `.axml` Layoutdateien enthält. (Fügen Sie also für jedes Projekt ein `<MonoDevelop.Ide.ItemProperties.ProjectName>`-Element hinzu.)
+8. Wiederholen Sie die Schritte 5–7 für jedes Android-Projekt in der Projektmappe, das `.axml`-Layoutdateien enthält. (Fügen Sie also ein `<MonoDevelop.Ide.ItemProperties.ProjectName>`-Element für jedes Projekt hinzu.)
 
-9. Speichern und schließen Sie die Datei `.userprefs`.
+9. Speichern und schließen Sie die `.userprefs`-Datei.
 
-10. Starten Sie Visual Studio für Mac neu, und öffnen Sie die Lösung erneut.
+10. Starten Sie Visual Studio für Mac neu, und öffnen Sie Ihre Projektmappe erneut.
 
 -----
